--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preview": "yarn build && yarn vite preview",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src",
-    "postinstall": "yarn generate-css-types",
     "generate-css-types": "tailwindcss-classnames -o src/classnames/tailwind.ts && prettier --write src/classnames/tailwind.ts"
   },
   "browserslist": {
@@ -24,11 +23,12 @@
     ]
   },
   "dependencies": {
-    "@big-whale-labs/constants": "^0.1.9",
-    "@big-whale-labs/seal-cred-ledger-contract": "^0.2.4",
-    "@coinbase/wallet-sdk": "^3.3.0",
+    "@big-whale-labs/constants": "^0.1.17",
+    "@big-whale-labs/seal-cred-ledger-contract": "^0.2.6",
+    "@coinbase/wallet-sdk": "^3.4.0",
     "@formkit/auto-animate": "^1.0.0-beta.1",
-    "@walletconnect/web3-provider": "^1.7.8",
+    "@opengsn/provider": "^3.0.0-beta.1",
+    "@walletconnect/web3-provider": "^1.8.0",
     "axios": "^0.27.2",
     "canvas-confetti": "^1.5.1",
     "entropy-string": "^4.2.0",
@@ -36,17 +36,18 @@
     "eth-rpc-errors": "^4.0.3",
     "ethers": "^5.6.9",
     "ffjavascript": "^0.2.55",
-    "preact": "^10.9.0",
+    "preact": "^10.10.1",
     "qr-code-styling": "^1.6.0-rc.1",
     "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.5",
+    "react-toastify": "^9.0.8",
     "secure-ls": "^1.2.6",
-    "valtio": "^1.6.1",
+    "valtio": "^1.6.3",
     "web3modal": "^1.9.8"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@preact/preset-vite": "^2.3.0",
     "@rollup/plugin-inject": "^4.0.4",
@@ -54,31 +55,30 @@
     "@typechain/ethers-v5": "^10.1.0",
     "@types/canvas-confetti": "^1.4.3",
     "@types/entropy-string": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "@vitejs/plugin-react": "^1.3.2",
-    "assert-browserify": "^2.0.0",
-    "autoprefixer": "^10.4.7",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-no-relative-import-paths": "^1.3.4",
+    "eslint-plugin-no-relative-import-paths": "^1.4.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "eslint-plugin-valtio": "^0.4.4",
-    "postcss": "^8.4.14",
+    "eslint-plugin-valtio": "^0.5.1",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "react-scripts": "^5.0.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-visualizer": "^5.6.0",
-    "tailwindcss": "^3.1.6",
+    "rollup-plugin-polyfill-node": "^0.10.2",
+    "rollup-plugin-visualizer": "^5.7.1",
+    "tailwindcss": "^3.1.8",
     "tailwindcss-classnames": "^3.0.5",
     "typescript": "^4.7.4",
-    "vite": "^2.9.14",
-    "vite-plugin-remove-console": "^1.0.4",
+    "vite": "^3.0.4",
+    "vite-plugin-remove-console": "^1.1.0",
     "vite-tsconfig-paths": "^3.5.0"
   },
   "packageManager": "yarn@3.2.1"
