--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@formkit/auto-animate": "^1.0.0-beta.1",
     "@opengsn/provider": "^3.0.0-beta.1",
     "@walletconnect/web3-provider": "^1.8.0",
+    "assert-browserify": "^2.0.0",
     "axios": "^0.27.2",
     "canvas-confetti": "^1.5.1",
     "entropy-string": "^4.2.0",
