--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     ]
   },
   "dependencies": {
-    "@big-whale-labs/constants": "^0.1.19",
+    "@big-whale-labs/constants": "^0.1.21",
     "@big-whale-labs/seal-cred-ledger-contract": "^0.2.6",
     "@big-whale-labs/stores": "^0.1.10",
     "@coinbase/wallet-sdk": "^3.4.0",
@@ -31,6 +31,7 @@
     "@material-tailwind/react": "^1.2.3",
     "@opengsn/provider": "^3.0.0-beta.1",
     "@walletconnect/web3-provider": "^1.8.0",
+    "assert-browserify": "^2.0.0",
     "axios": "^0.27.2",
     "canvas-confetti": "^1.5.1",
     "entropy-string": "^4.2.0",
