--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@opengsn/common": "3.0.0-beta.1",
     "@opengsn/contracts": "3.0.0-beta.1",
     "@opengsn/provider": "3.0.0-beta.1",
+    "@upacyxou/stores": "^0.2.23",
     "@walletconnect/web3-provider": "^1.8.0",
     "assert-browserify": "^2.0.0",
     "axios": "^0.27.2",
