--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@lottiefiles/react-lottie-player": "^3.4.7",
     "@material-tailwind/react": "^1.2.4",
-    "@opengsn/provider": "3.0.0-beta.2",
+    "@opengsn/provider": "3.0.0-beta.1",
     "@walletconnect/web3-provider": "^1.8.0",
     "assert-browserify": "^2.0.0",
     "axios": "^0.27.2",
@@ -87,5 +87,9 @@
     "vite-plugin-remove-console": "^1.1.0",
     "vite-tsconfig-paths": "^3.5.0"
   },
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.2.3",
+  "resolutions": {
+    "@opengsn/provider/@opengsn/common": "3.0.0-beta.1",
+    "@opengsn/provider/@opengsn/contracts": "3.0.0-beta.1"
+  }
 }
